@@ -171,6 +171,27 @@ ssheikh@erols.com
 
 			  Not integrated: max1150-1.sym
 
+			  For contributing or update the following symbols:
+
+				adc0820-1.sym max038-1.sym max100-1.sym 
+				max1005-1.sym max1011-1.sym max101A-1.sym
+				max1055-1.sym max1114-1.sym max135-1.sym
+				max147-1.sym max1480A-1.sym max1482-1.sym
+				max1588-1.sym max1614-1.sym max1620-1.sym 
+				max1637-1.sym max186-1.sym max214-1.sym
+				max218-1.sym max3120-1.sym max378-1.sym
+				max400-1.sym max4005-1.sym max436-1.sym
+				max872-1.sym max874-1.sym
+
+			  For contributing the following symbols:
+
+				2N5245-1.sym 2N5911-1.sym 2S2K3-1.sym
+				capacitor-variable-2.sym 
+				microphone-1.sym photo-resistor-1.sym
+				relay-1.sym switch-spst-1.sym
+				vcc-1.sym vcc-minus-1.sym
+
+
 
 Also thanks go to all the people on the geda-dev mailing list.  Many of
 the subscribers provided good suggestions which are greatly appreciated
