@@ -1,10 +1,9 @@
-v 19990302
-P 500 400 500 550 1
+v 19990601
+P 500 450 500 600 1
 {
-T 400 450 5 8 0 1 0
+T 400 500 5 8 0 1 0
 pin3=3
 }
-L 500 200 500 400 3
 L 500 200 448 301 3
 L 501 201 553 302 3
 L 600 200 500 0 3
@@ -26,3 +25,4 @@ T 100 150 5 8 0 1 0
 pin1=1
 }
 L 201 200 150 100 3
+L 500 200 500 450 3
