@@ -1,6 +1,6 @@
-v 19990513
+v 19990601
 B 300 0 2300 3900 3
-T 1350 100 5 10 0 1 0
+T 2850 3950 5 10 0 0 0
 device=ADC0820
 P 2600 3700 2900 3700 1
 {
@@ -56,10 +56,6 @@ T 2150 1250 3 10 1 0 0
 DB6
 T 2150 850 3 10 1 0 0
 DB7
-T 1600 3950 2 8 0 1 0
-device=ADC0820
-T 1550 3900 2 8 0 1 0
-device=ADC0820
 T 2150 3600 3 10 1 0 0
 DB0
 P 300 3700 0 3700 1
@@ -76,21 +72,6 @@ P 300 2900 0 2900 1
 {
 T 100 2950 5 8 1 1 0
 pin12=12
-}
-P 300 2500 0 2500 1
-{
-T 100 2550 5 8 1 1 0
-pin6=6
-}
-P 300 2100 0 2100 1
-{
-T 100 2150 5 8 1 1 0
-pin8=8
-}
-P 300 1700 0 1700 1
-{
-T 100 1750 5 8 1 1 0
-pin9=9
 }
 P 300 1300 0 1300 1
 {
@@ -125,7 +106,23 @@ pin18=18
 }
 T 2100 450 3 10 1 0 0
 OFL/
-T 1700 3900 2 8 0 1 0
-device=ADC0820
 T 350 4000 3 8 1 0 0
 ADC0820
+P 0 2500 200 2500 1
+{
+T 100 2550 5 8 1 1 0
+pin6=6
+}
+V 250 2500 50 6
+P 200 2100 0 2100 1
+{
+T 100 2150 5 8 1 1 0
+pin8=8
+}
+V 250 2100 50 6
+P 200 1700 0 1700 1
+{
+T 100 1750 5 8 1 1 0
+pin9=9
+}
+V 250 1700 50 6
