@@ -1,6 +1,6 @@
-v 19990513
+v 19990601
 B 300 0 2000 4000 3
-T 1000 50 5 10 0 1 0
+T 2500 4100 5 10 0 0 0
 device=MAX038
 P 300 3800 0 3800 1
 {
