@@ -1,13 +1,8 @@
-v 19990513
+v 19990610
 P 300 7300 0 7300 1
 {
 T 100 7350 5 8 1 1 0
 pin2=2
-}
-P 300 6900 0 6900 1
-{
-T 100 6950 5 8 1 1 0
-pin3=3
 }
 P 300 6500 0 6500 1
 {
@@ -104,8 +99,6 @@ B1
 T 2000 400 3 10 1 0 0
 B0
 B 300 0 2000 7500 3
-T 900 100 5 10 0 1 0
-device=MAX100
 P 2600 6500 2300 6500 1
 {
 T 2400 6550 5 8 1 1 0
@@ -186,21 +179,11 @@ P 2600 500 2300 500 1
 T 2400 550 5 8 1 1 0
 pin47=47
 }
-P 300 4100 0 4100 1
+P 0 6900 200 6900 1
 {
-T 100 4150 5 8 1 1 0
-pin62=62
+T 100 6950 5 8 1 1 0
+pin3=3
 }
-P 300 3700 0 3700 1
-{
-T 100 3750 5 8 1 1 0
-pin61=61
-}
-T 450 4050 3 10 1 0 0
-CLK
-T 450 3650 3 10 1 0 0
-CLK/
-L 300 4200 400 4100 3
-L 400 4100 300 4000 3
-L 300 3800 400 3700 3
-L 400 3700 300 3600 3
+V 250 6900 50 6
+T 2500 7650 5 8 0 0 0
+device=MAX100
