@@ -1,4 +1,4 @@
-v 19990513
+v 19990601
 P 300 3900 0 3900 1
 {
 T 100 3950 5 8 1 1 0
@@ -86,7 +86,7 @@ pin16=16
 T 450 250 3 10 1 0 0
 CLK
 B 300 0 2000 4200 3
-T 1300 100 5 10 0 1 0
+T 2550 4250 5 10 0 0 0
 device=MAX1005
 L 300 400 400 300 3
 L 400 300 300 200 3
