@@ -1,4 +1,4 @@
-v 19990513
+v 19990601
 P 300 3200 0 3200 1
 {
 T 100 3250 5 8 1 1 0
@@ -95,7 +95,7 @@ D4
 T 2000 350 3 10 1 0 0
 D5
 B 300 0 2000 3400 3
-T 400 100 5 10 0 1 0
+T 2650 3450 5 10 0 0 0
 device=MAX1011
 P 2600 3200 2300 3200 1
 {
