@@ -1,13 +1,8 @@
-v 19990513
+v 19990601
 P 300 5900 0 5900 1
 {
 T 100 5950 5 8 1 1 0
 pin5=5
-}
-P 300 5500 0 5500 1
-{
-T 100 5550 5 8 1 1 0
-pin6=6
 }
 P 300 5100 0 5100 1
 {
@@ -174,5 +169,11 @@ pin35=35
 T 1450 250 3 10 1 0 0
 DREADY
 B 300 0 2000 6100 3
-T 400 100 5 10 0 1 0
+T 2650 6300 5 10 0 0 0
 device=MAX1114
+P 0 5500 200 5500 1
+{
+T 100 5550 5 8 1 1 0
+pin6=6
+}
+V 250 5500 50 6
