@@ -1,4 +1,4 @@
-v 19990513
+v 19990601
 P 300 4800 0 4800 1
 {
 T 100 4850 5 8 1 1 0
@@ -8,21 +8,6 @@ P 300 4400 0 4400 1
 {
 T 100 4450 5 8 1 1 0
 pin19=19
-}
-P 300 4000 0 4000 1
-{
-T 100 4050 5 8 1 1 0
-pin1=1
-}
-P 300 3600 0 3600 1
-{
-T 100 3650 5 8 1 1 0
-pin2=2
-}
-P 300 3200 0 3200 1
-{
-T 100 3250 5 8 1 1 0
-pin3=3
 }
 P 300 2800 0 2800 1
 {
@@ -156,7 +141,7 @@ pin26=26
 T 1550 750 3 10 1 0 0
 INTOUT
 B 300 0 2000 5000 3
-T 850 100 5 10 0 1 0
+T 2650 5050 5 10 0 0 0
 device=MAX135
 P 300 400 0 400 1
 {
@@ -172,3 +157,21 @@ T 400 350 3 10 1 0 0
 INTIN
 T 1500 350 3 10 1 0 0
 BUFOUT
+P 0 4000 200 4000 1
+{
+T 100 4050 5 8 1 1 0
+pin1=1
+}
+P 0 3600 200 3600 1
+{
+T 100 3650 5 8 1 1 0
+pin2=2
+}
+P 0 3200 200 3200 1
+{
+T 100 3250 5 8 1 1 0
+pin3=3
+}
+V 250 4000 50 6
+V 250 3600 50 6
+V 250 3200 50 6
