@@ -1,13 +1,13 @@
-v 19990513
+v 19990601
 P 300 1600 0 1600 1
 {
 T 100 1650 5 8 1 1 0
-pin#=3
+pin3=3
 }
 P 300 1200 0 1200 1
 {
 T 100 1250 5 8 1 1 0
-pin#=4
+pin4=4
 }
 P 300 800 0 800 1
 {
@@ -37,5 +37,5 @@ VOSTRIM
 T 350 1850 3 10 1 0 0
 MAX1588
 B 300 0 2000 1800 3
-T 1300 1600 5 10 0 1 0
+T 1950 2050 5 10 0 0 0
 device=MAX1588
