@@ -1,4 +1,4 @@
-v 19990513
+v 19990601
 P 300 3800 0 3800 1
 {
 T 100 3850 5 8 1 1 0
@@ -13,11 +13,6 @@ P 300 3000 0 3000 1
 {
 T 100 3050 5 8 1 1 0
 pin3=3
-}
-P 300 2600 0 2600 1
-{
-T 100 2650 5 8 1 1 0
-pin4=4
 }
 P 300 2200 0 2200 1
 {
@@ -84,7 +79,7 @@ pin16=16
 }
 T 400 1350 3 10 1 0 0
 FB
-T 1650 1750 3 10 1 0 0
+T 1700 1750 3 10 1 0 0
 DOUT
 T 400 950 3 10 1 0 0
 LX
@@ -93,5 +88,11 @@ DLO
 T 400 150 3 10 1 0 0
 DHI
 B 300 0 2000 4000 3
-T 1100 100 5 10 0 1 0
+T 2400 4000 5 10 0 0 0
 device=MAX1620
+P 0 2600 200 2600 1
+{
+T 100 2650 5 8 1 1 0
+pin4=4
+}
+V 250 2600 50 6
