@@ -1,4 +1,4 @@
-v 19990513
+v 19990601
 P 300 3400 0 3400 1
 {
 T 100 3450 5 8 1 1 0
@@ -18,11 +18,6 @@ P 300 2200 0 2200 1
 {
 T 100 2250 5 8 1 1 0
 pin4=4
-}
-P 300 1800 0 1800 1
-{
-T 100 1850 5 8 1 1 0
-pin6=6
 }
 P 300 1400 0 1400 1
 {
@@ -81,10 +76,16 @@ pin16=16
 T 350 3700 3 10 1 0 0
 MAX1637
 B 300 0 2000 3650 3
-T 1300 100 5 10 0 1 0
+T 1300 100 5 10 0 0 0
 device=MAX1637
 P 2600 1800 2300 1800 1
 {
 T 2400 1850 5 8 1 1 0
 pin11=11
 }
+P 0 1800 200 1800 1
+{
+T 100 1850 5 8 1 1 0
+pin6=6
+}
+V 250 1800 50 6
