@@ -1,4 +1,4 @@
-v 19990513
+v 19990601
 P 300 5600 0 5600 1
 {
 T 100 5650 5 8 1 1 0
@@ -49,7 +49,6 @@ P 2600 5200 2300 5200 1
 T 2400 5250 5 8 1 1 0
 pin16=16
 }
-P 2600 5200 2300 5200 1
 T 1700 5500 3 10 1 0 0
 DOUT
 T 1550 5150 3 10 1 0 0
@@ -72,11 +71,6 @@ T 400 2750 3 10 1 0 0
 CH7
 T 400 2400 3 10 1 0 0
 SHDN/
-P 300 2400 0 2400 1
-{
-T 100 2450 5 8 1 1 0
-pin10=10
-}
 T 350 5850 3 10 1 0 0
 MAX186
 P 300 2000 0 2000 1
@@ -87,17 +81,12 @@ pin11=11
 T 400 2000 3 10 1 0 0
 VREF
 B 300 0 2000 5800 3
-T 1100 50 5 10 0 1 0
+T 2600 5900 5 10 0 0 0
 device=MAX186
 P 300 1600 0 1600 1
 {
 T 100 1650 5 8 1 1 0
 pin12=12
-}
-P 300 800 0 800 1
-{
-T 100 850 5 8 1 1 0
-pin19=19
 }
 P 300 1200 0 1200 1
 {
@@ -119,3 +108,15 @@ T 450 350 3 10 1 0 0
 SCLK
 L 300 500 400 400 3
 L 400 400 300 300 3
+P 0 2450 200 2450 1
+{
+T 100 2500 5 8 1 1 0
+pin10=10
+}
+V 250 2450 50 6
+P 0 800 200 800 1
+{
+T 100 850 5 8 1 1 0
+pin19=19
+}
+V 250 800 50 6
